<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="">
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent" android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/undertoolbar_space_height" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageview_profilesettings_picture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:srcCompat="@tools:sample/avatars" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/profile_settings_space_height" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textview_profilesettings_nametag"
                    android:layout_width="@dimen/profile_settings_tags_width"
                    android:layout_height="wrap_content"
                    android:text="@string/profiledisplay_nametag"
                    tools:text="@string/profiledisplay_nametag" />


                <EditText
                    android:id="@+id/edittext_profilesettings_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    tools:text="Test Name"/>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/profile_settings_space_height" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textview_profiledisplay_emailtag"
                    android:layout_width="@dimen/profile_settings_tags_width"
                    android:layout_height="wrap_content"
                    android:text="@string/profiledisplay_emailtag"
                    tools:text="@string/profiledisplay_emailtag" />


                <TextView
                    android:id="@+id/textview_profilesettings_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    tools:text="TESTEMAIL@gmail.com"/>


            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/profile_settings_space_height"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textview_profilesettings_descriptiontag"
                    android:layout_width="@dimen/profile_settings_tags_width"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/profiledisplay_descriptiontag" />
            </LinearLayout>

            <EditText
                android:id="@+id/edittext_profilesettings_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine"
                tools:text="@string/LoremIpsum"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/profile_settings_space_height" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textview_profilesettings_categoriestag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/profiledisplay_categoriestag" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerview_profilesettings_categories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

            </android.support.v7.widget.RecyclerView>

        </LinearLayout>

    </ScrollView>

    <include
    layout="@layout/app_bar_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent" />


    <android.support.design.widget.NavigationView
    android:id="@+id/nav_view"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:fitsSystemWindows="true"
    app:headerLayout="@layout/nav_header_main"
    app:menu="@menu/activity_main_drawer" />

</android.support.v4.widget.DrawerLayout>
