<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?backgroundColor"
    xmlns:tools="http://schemas.android.com/tools">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/profile_settings_space_height" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageview_profiledisplay_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:srcCompat="@tools:sample/avatars" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/profile_settings_space_height" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textview_profiledisplay_nametag"
                android:layout_width="@dimen/profile_settings_tags_width"
                android:layout_height="wrap_content"
                android:text="@string/profiledisplay_nametag"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/textview_profiledisplay_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/profile_settings_space_height" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textview_profiledisplay_emailtag"
                android:layout_width="@dimen/profile_settings_tags_width"
                android:layout_height="wrap_content"
                android:text="@string/profiledisplay_emailtag"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/textview_profiledisplay_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"/>


        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/profile_settings_space_height"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textview_profiledisplay_descriptiontag"
                android:layout_width="@dimen/profile_settings_tags_width"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/profiledisplay_descriptiontag"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/textview_profiledisplay_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine"
            tools:text="@string/LoremIpsum"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/profile_settings_space_height" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textview_usersearchlayout_ratingtag"
                android:layout_width="@dimen/profile_settings_tags_width"
                android:layout_height="wrap_content"
                android:text="@string/profiledisplay_ratingtag"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/textview_profiledisplay_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"/>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/profile_settings_space_height" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textview_profiledisplay_categoriestag"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/profiledisplay_categoriestag"
                android:textStyle="bold" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview_profiledisplay_categories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

        </android.support.v7.widget.RecyclerView>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/profile_settings_space_height" />

        <Button
            android:id="@+id/button_profiledisplay_modify"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/profiledisplay_modify" />

    </LinearLayout>

</ScrollView>