...
            app:showAsAction="always" />
    </group>
    <group
        android:id="@+id/group_cancel">

        <item
            android:id="@+id/action_save"
            android:icon="@drawable/ic_menuitem_save"
            android:orderInCategory="100"
            android:title="Save"
            android:visible="false"
            android:enabled="false"
            app:showAsAction="ifRoom" />
...
